# Cpp-lab-4

./: CMakeLists.txt  MyReadme.txt  README.md
Client2/: Client2.pro  SettingsClient.txt  client.cpp  client.h  common.h  main.cpp
MyClientTCP/: MyClient.cpp  MyClient.h  main.cpp
Server/: Aphorisms.txt  Server.pro  SettingsServer.txt  common.h  main.cpp  qsimpleserver.cpp  qsimpleserver.h  qsocketthread.cpp  qsocketthread.h
include/Client/: Client.h
include/Server/: Server.h
server-client/: CMakeLists.txt  aphorisms.txt
server-client/client/: Client.pro  MyTcpClient.cpp  MyTcpClient.h  config_client.ini  main.cpp
server-client/mylib/: Connection.cpp  Connection.h  ConsoleHelper.cpp  ConsoleHelper.h  Message.cpp  Message.h  MessageType.h  MyTcpApp.cpp  MyTcpApp.h
server-client/server/: ClientThread.cpp  ClientThread.h  MyTcpServer.cpp  MyTcpServer.h  Server.pro  config_server.ini  main.cpp
src/Client/: Client.cpp  ClientMain.cpp
src/Server/: Aforisms.txt  Config.txt  Server.cpp  ServerMain.cpp
